promote CalendarService; add subscribeToAuthState to it